oper/oper_parser.go
// Code generated from ./oper/oper.g4 by ANTLR 4.7.1. DO NOT EDIT.

package oper // oper
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

import . "filter4go/operand"

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'('", "')'", "','", "'|'", "'^'", "'&'", "'<<'", "'>>'", "'+'", "'-'",
	"'*'", "'/'", "'%'", "'~'", "'['", "']'", "'.'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"NULL", "TRUE", "FALSE", "IntegerLiteral", "FloatingPointLiteral", "StringLiteral",
	"Identifier", "WS",
}

var ruleNames = []string{
	"oper", "expressionList", "parExpression", "expression", "exclusiveOrExpression",
	"andExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression",
	"notExpression", "primary", "member", "function", "variable", "constant",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type operParser struct {
	*antlr.BaseParser
}

func NewoperParser(input antlr.TokenStream) *operParser {
	this := new(operParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "oper.g4"

	return this
}

// operParser tokens.
const (
	operParserEOF                  = antlr.TokenEOF
	operParserT__0                 = 1
	operParserT__1                 = 2
	operParserT__2                 = 3
	operParserT__3                 = 4
	operParserT__4                 = 5
	operParserT__5                 = 6
	operParserT__6                 = 7
	operParserT__7                 = 8
	operParserT__8                 = 9
	operParserT__9                 = 10
	operParserT__10                = 11
	operParserT__11                = 12
	operParserT__12                = 13
	operParserT__13                = 14
	operParserT__14                = 15
	operParserT__15                = 16
	operParserT__16                = 17
	operParserNULL                 = 18
	operParserTRUE                 = 19
	operParserFALSE                = 20
	operParserIntegerLiteral       = 21
	operParserFloatingPointLiteral = 22
	operParserStringLiteral        = 23
	operParserIdentifier           = 24
	operParserWS                   = 25
)

// operParser rules.
const (
	operParserRULE_oper                     = 0
	operParserRULE_expressionList           = 1
	operParserRULE_parExpression            = 2
	operParserRULE_expression               = 3
	operParserRULE_exclusiveOrExpression    = 4
	operParserRULE_andExpression            = 5
	operParserRULE_shiftExpression          = 6
	operParserRULE_additiveExpression       = 7
	operParserRULE_multiplicativeExpression = 8
	operParserRULE_notExpression            = 9
	operParserRULE_primary                  = 10
	operParserRULE_member                   = 11
	operParserRULE_function                 = 12
	operParserRULE_variable                 = 13
	operParserRULE_constant                 = 14
)

// IOperContext is an interface to support dynamic dispatch.
type IOperContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetExpList returns the expList rule contexts.
	GetExpList() IExpressionListContext

	// GetExp returns the exp rule contexts.
	GetExp() IExpressionContext

	// SetExpList sets the expList rule contexts.
	SetExpList(IExpressionListContext)

	// SetExp sets the exp rule contexts.
	SetExp(IExpressionContext)

	// GetOperand returns the operand attribute.
	GetOperand() Operand

	// SetOperand sets the operand attribute.
	SetOperand(Operand)

	// IsOperContext differentiates from other interfaces.
	IsOperContext()
}

type OperContext struct {
	*antlr.BaseParserRuleContext
	parser  antlr.Parser
	operand Operand
	expList IExpressionListContext
	exp     IExpressionContext
}

func NewEmptyOperContext() *OperContext {
	var p = new(OperContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = operParserRULE_oper
	return p
}

func (*OperContext) IsOperContext() {}

func NewOperContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperContext {
	var p = new(OperContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = operParserRULE_oper

	return p
}

func (s *OperContext) GetParser() antlr.Parser { return s.parser }

func (s *OperContext) GetExpList() IExpressionListContext { return s.expList }

func (s *OperContext) GetExp() IExpressionContext { return s.exp }

func (s *OperContext) SetExpList(v IExpressionListContext) { s.expList = v }

func (s *OperContext) SetExp(v IExpressionContext) { s.exp = v }

func (s *OperContext) GetOperand() Operand { return s.operand }

func (s *OperContext) SetOperand(v Operand) { s.operand = v }

func (s *OperContext) ExpressionList() IExpressionListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionListContext)
}

func (s *OperContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *OperContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *operParser) Oper() (localctx IOperContext) {
	localctx = NewOperContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, operParserRULE_oper)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(30)
			p.Match(operParserT__0)
		}
		{
			p.SetState(31)

			var _x = p.ExpressionList()

			localctx.(*OperContext).expList = _x
		}
		localctx.(*OperContext).operand, _ = CreateOperandsExpression("", localctx.(*OperContext).GetExpList().GetOperands())
		{
			p.SetState(33)
			p.Match(operParserT__1)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(35)

			var _x = p.Expression()

			localctx.(*OperContext).exp = _x
		}
		localctx.(*OperContext).operand = localctx.(*OperContext).GetExp().GetOperand()

	}

	return localctx
}

// IExpressionListContext is an interface to support dynamic dispatch.
type IExpressionListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetExp returns the exp rule contexts.
	GetExp() IExpressionContext

	// SetExp sets the exp rule contexts.
	SetExp(IExpressionContext)

	// GetOperands returns the operands attribute.
	GetOperands() []Operand

	// SetOperands sets the operands attribute.
	SetOperands([]Operand)

	// IsExpressionListContext differentiates from other interfaces.
	IsExpressionListContext()
}

type ExpressionListContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	operands []Operand
	exp      IExpressionContext
}

func NewEmptyExpressionListContext() *ExpressionListContext {
	var p = new(ExpressionListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = operParserRULE_expressionList
	return p
}

func (*ExpressionListContext) IsExpressionListContext() {}

func NewExpressionListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionListContext {
	var p = new(ExpressionListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = operParserRULE_expressionList

	return p
}

func (s *ExpressionListContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionListContext) GetExp() IExpressionContext { return s.exp }

func (s *ExpressionListContext) SetExp(v IExpressionContext) { s.exp = v }

func (s *ExpressionListContext) GetOperands() []Operand { return s.operands }

func (s *ExpressionListContext) SetOperands(v []Operand) { s.operands = v }

func (s *ExpressionListContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *ExpressionListContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExpressionListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *operParser) ExpressionList() (localctx IExpressionListContext) {
	localctx = NewExpressionListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, operParserRULE_expressionList)

	localctx.(*ExpressionListContext).operands = []Operand{}

	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)

		var _x = p.Expression()

		localctx.(*ExpressionListContext).exp = _x
	}
	localctx.(*ExpressionListContext).operands = append(localctx.(*ExpressionListContext).operands, localctx.(*ExpressionListContext).GetExp().GetOperand())
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == operParserT__2 {
		{
			p.SetState(42)
			p.Match(operParserT__2)
		}
		{
			p.SetState(43)

			var _x = p.Expression()

			localctx.(*ExpressionListContext).exp = _x
		}
		localctx.(*ExpressionListContext).operands = append(localctx.(*ExpressionListContext).operands, localctx.(*ExpressionListContext).GetExp().GetOperand())

		p.SetState(50)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IParExpressionContext is an interface to support dynamic dispatch.
type IParExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetExp returns the exp rule contexts.
	GetExp() IExpressionContext

	// SetExp sets the exp rule contexts.
	SetExp(IExpressionContext)

	// GetOperand returns the operand attribute.
	GetOperand() Operand

	// SetOperand sets the operand attribute.
	SetOperand(Operand)

	// IsParExpressionContext differentiates from other interfaces.
	IsParExpressionContext()
}

type ParExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser  antlr.Parser
	operand Operand
	exp     IExpressionContext
}

func NewEmptyParExpressionContext() *ParExpressionContext {
	var p = new(ParExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = operParserRULE_parExpression
	return p
}

func (*ParExpressionContext) IsParExpressionContext() {}

func NewParExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParExpressionContext {
	var p = new(ParExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = operParserRULE_parExpression

	return p
}

func (s *ParExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ParExpressionContext) GetExp() IExpressionContext { return s.exp }

func (s *ParExpressionContext) SetExp(v IExpressionContext) { s.exp = v }

func (s *ParExpressionContext) GetOperand() Operand { return s.operand }

func (s *ParExpressionContext) SetOperand(v Operand) { s.operand = v }

func (s *ParExpressionContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ParExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *operParser) ParExpression() (localctx IParExpressionContext) {
	localctx = NewParExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, operParserRULE_parExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(operParserT__0)
	}
	{
		p.SetState(52)

		var _x = p.Expression()

		localctx.(*ParExpressionContext).exp = _x
	}
	{
		p.SetState(53)
		p.Match(operParserT__1)
	}
	localctx.(*ParExpressionContext).operand, _ = CreateParenExpression("(", []Operand{localctx.(*ParExpressionContext).GetExp().GetOperand()})

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetT returns the t token.
	GetT() antlr.Token

	// SetT sets the t token.
	SetT(antlr.Token)

	// GetExp returns the exp rule contexts.
	GetExp() IExclusiveOrExpressionContext

	// SetExp sets the exp rule contexts.
	SetExp(IExclusiveOrExpressionContext)

	// GetOperand returns the operand attribute.
	GetOperand() Operand

	// SetOperand sets the operand attribute.
	SetOperand(Operand)

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser  antlr.Parser
	operand Operand
	exp     IExclusiveOrExpressionContext
	t       antlr.Token
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = operParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = operParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) GetT() antlr.Token { return s.t }

func (s *ExpressionContext) SetT(v antlr.Token) { s.t = v }

func (s *ExpressionContext) GetExp() IExclusiveOrExpressionContext { return s.exp }

func (s *ExpressionContext) SetExp(v IExclusiveOrExpressionContext) { s.exp = v }

func (s *ExpressionContext) GetOperand() Operand { return s.operand }

func (s *ExpressionContext) SetOperand(v Operand) { s.operand = v }

func (s *ExpressionContext) AllExclusiveOrExpression() []IExclusiveOrExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExclusiveOrExpressionContext)(nil)).Elem())
	var tst = make([]IExclusiveOrExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExclusiveOrExpressionContext)
		}
	}

	return tst
}

func (s *ExpressionContext) ExclusiveOrExpression(i int) IExclusiveOrExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExclusiveOrExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExclusiveOrExpressionContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *operParser) Expression() (localctx IExpressionContext) {
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, operParserRULE_expression)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)

		var _x = p.ExclusiveOrExpression()

		localctx.(*ExpressionContext).exp = _x
	}
	localctx.(*ExpressionContext).operand = localctx.(*ExpressionContext).GetExp().GetOperand()
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == operParserT__3 {
		{
			p.SetState(58)

			var _m = p.Match(operParserT__3)

			localctx.(*ExpressionContext).t = _m
		}
		{
			p.SetState(59)

			var _x = p.ExclusiveOrExpression()

			localctx.(*ExpressionContext).exp = _x
		}
		localctx.(*ExpressionContext).operand, _ = CreateBitwiseOrExpression(localctx.(*ExpressionContext).GetT().GetText(), []Operand{localctx.(*ExpressionContext).operand, localctx.(*ExpressionContext).GetExp().GetOperand()})

		p.SetState(66)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IExclusiveOrExpressionContext is an interface to support dynamic dispatch.
type IExclusiveOrExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetT returns the t token.
	GetT() antlr.Token

	// SetT sets the t token.
	SetT(antlr.Token)

	// GetExp returns the exp rule contexts.
	GetExp() IAndExpressionContext

	// SetExp sets the exp rule contexts.
	SetExp(IAndExpressionContext)

	// GetOperand returns the operand attribute.
	GetOperand() Operand

	// SetOperand sets the operand attribute.
	SetOperand(Operand)

	// IsExclusiveOrExpressionContext differentiates from other interfaces.
	IsExclusiveOrExpressionContext()
}

type ExclusiveOrExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser  antlr.Parser
	operand Operand
	exp     IAndExpressionContext
	t       antlr.Token
}

func NewEmptyExclusiveOrExpressionContext() *ExclusiveOrExpressionContext {
	var p = new(ExclusiveOrExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = operParserRULE_exclusiveOrExpression
	return p
}

func (*ExclusiveOrExpressionContext) IsExclusiveOrExpressionContext() {}

func NewExclusiveOrExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExclusiveOrExpressionContext {
	var p = new(ExclusiveOrExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = operParserRULE_exclusiveOrExpression

	return p
}

func (s *ExclusiveOrExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExclusiveOrExpressionContext) GetT() antlr.Token { return s.t }

func (s *ExclusiveOrExpressionContext) SetT(v antlr.Token) { s.t = v }

func (s *ExclusiveOrExpressionContext) GetExp() IAndExpressionContext { return s.exp }

func (s *ExclusiveOrExpressionContext) SetExp(v IAndExpressionContext) { s.exp = v }

func (s *ExclusiveOrExpressionContext) GetOperand() Operand { return s.operand }

func (s *ExclusiveOrExpressionContext) SetOperand(v Operand) { s.operand = v }

func (s *ExclusiveOrExpressionContext) AllAndExpression() []IAndExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAndExpressionContext)(nil)).Elem())
	var tst = make([]IAndExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAndExpressionContext)
		}
	}

	return tst
}

func (s *ExclusiveOrExpressionContext) AndExpression(i int) IAndExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAndExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAndExpressionContext)
}

func (s *ExclusiveOrExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExclusiveOrExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *operParser) ExclusiveOrExpression() (localctx IExclusiveOrExpressionContext) {
	localctx = NewExclusiveOrExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, operParserRULE_exclusiveOrExpression)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)

		var _x = p.AndExpression()

		localctx.(*ExclusiveOrExpressionContext).exp = _x
	}
	localctx.(*ExclusiveOrExpressionContext).operand = localctx.(*ExclusiveOrExpressionContext).GetExp().GetOperand()
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == operParserT__4 {
		{
			p.SetState(69)

			var _m = p.Match(operParserT__4)

			localctx.(*ExclusiveOrExpressionContext).t = _m
		}
		{
			p.SetState(70)

			var _x = p.AndExpression()

			localctx.(*ExclusiveOrExpressionContext).exp = _x
		}

		localctx.(*ExclusiveOrExpressionContext).operand, _ = CreateBitwiseXorExpression(localctx.(*ExclusiveOrExpressionContext).GetT().GetText(), []Operand{localctx.(*ExclusiveOrExpressionContext).operand, localctx.(*ExclusiveOrExpressionContext).GetExp().GetOperand()})

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IAndExpressionContext is an interface to support dynamic dispatch.
type IAndExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetT returns the t token.
	GetT() antlr.Token

	// SetT sets the t token.
	SetT(antlr.Token)

	// GetExp returns the exp rule contexts.
	GetExp() IShiftExpressionContext

	// SetExp sets the exp rule contexts.
	SetExp(IShiftExpressionContext)
